--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ entrypoints==0.4
 executing==0.10.0
 gitdb==4.0.9
 GitPython==3.1.27
+google-api-python-client==2.56.0
+google-auth-httplib2==0.1.0
 google-cloud-storage==2.5.0
 idna==3.3
 importlib-metadata==4.12.0
